--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 {% if site.hide_post_date != true %}
   {% include post-date.html %}
 {% endif %}
-{% if site.hide_post_share != true %}
+{% if site.hide_post_share == true %}
   {% include social-sharing.html %}
 {% endif %}
 {% if site.hide_related_posts != true %}
