--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="contact" sizes="144x144" href="{{ '/assets/img/contact.jpg' | absolute_url }}">
 
+  <!-- uploading icon -->
+  <link rel="icon" href="https://github.com/dnnguyen99/dnnguyen99.github.io/blob/gh-pages/icon.jpg">
+  
   <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
     MathJax.Hub.Config({
