--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- uploading icon -->
-  <link rel="icon" href="https://github.com/dnnguyen99/dnnguyen99.github.io/blob/gh-pages/icon2.jpg">
+   <link rel="shortcut icon" type="image/x-icon" href="icon.jpg">
+  <!--<link rel="icon" href="https://github.com/dnnguyen99/dnnguyen99.github.io/blob/gh-pages/icon2.jpg"> -->
   
   <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
