--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+{% if page.image %}
+  <img src="{{ site.github.url }}/assets/img/{{ page.image }}">
+{% endif %}
+
 <h1>
   {{ page.title }}
 </h1>
